standardize project structure and add entities